Bug 454004 - On login, Widget resets to using Pie Chart display style after manually setting it to use Line Chart display style
Summary: On login, Widget resets to using Pie Chart display style after manually setti...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Monitor widgets (other bugs)
Version First Reported In: 5.24.90
Platform: Neon Linux
: VHI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 455446 456820 457008 457357 457538 457589 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-05-18 17:11 UTC by Paul Worrall
Modified: 2022-09-12 22:16 UTC (History)
14 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Worrall 2022-05-18 17:11:14 UTC
STEPS TO REPRODUCE
1. Add a Memory Usage widget to a desktop (defaults to pie chart)
2. Change its display style to Line Chart
3. Logout and login

OBSERVED RESULT
Memory usage widget has gone back to pie chart

EXPECTED RESULT
Widget retains configured display style

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.24.80
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.4
Kernel Version: 5.13.0-40-generic (64-bit)
Graphics Platform: X11
Processors: 2 × AMD A6-6400K APU with Radeon(tm) HD Graphics
Memory: 7.7 GiB of RAM
Graphics Processor: AMD CEDAR
Manufacturer: NOVATECH LTD
Product Name: BB-64004H
System Version: V1.0

ADDITIONAL INFORMATION
Same thing with CPU usage widget.  Haven't tried any others.
Other settings (e.g. Show Title) are remembered.
Comment 1 Paul Worrall 2022-05-21 17:08:08 UTC
Repeatable on a fresh install of Plasma 5.25 beta via KDE neon testing edition
Comment 2 Paul Worrall 2022-05-28 09:50:56 UTC
Marking as a regression since it works OK in 5.24.5
Comment 3 Nate Graham 2022-06-17 18:13:27 UTC
*** Bug 455446 has been marked as a duplicate of this bug. ***
Comment 4 Paul Worrall 2022-06-21 16:33:42 UTC
Of all the "standard" system monitor widgets, only the one called "System monitor Sensor" remembers its display style.  I can configure this to recreate the Memory Usage widget with line style.
Comment 5 Paul Worrall 2022-07-13 10:34:10 UTC
It's not just display style:

With the "Total CPU Use" widget, if I modify it to remove the "Number of CPUs" and "Number of cores" this is not remembered on the next login.
Comment 6 Paul Worrall 2022-07-18 10:39:13 UTC
*** Bug 456820 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2022-07-22 17:55:18 UTC
*** Bug 457008 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2022-07-22 17:57:12 UTC
Let's see if fixing this issue fixed the other issue Paul reported with "Number of CPUs" and "Number of cores" not being remembered; if not, we should get a new bug report about it.
Comment 9 Nate Graham 2022-08-01 17:05:34 UTC
*** Bug 457357 has been marked as a duplicate of this bug. ***
Comment 10 Bug Janitor Service 2022-08-03 17:29:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1994
Comment 11 Nate Graham 2022-08-05 14:09:40 UTC
Git commit 262bf0af8479f04fdbc41e4c8c2a11dcd403564f by Nate Graham, on behalf of Alexander Lohnau.
Committed on 05/08/2022 at 14:02.
Pushed by ngraham into branch 'master'.

Fix systemmonitor preferences being reset

See https://invent.kde.org/frameworks/plasma-framework/-/commit/3078bc25dfe49bb627ae9a65cd18020054a5950e#note_497421

M  +1    -1    applets/systemmonitor/systemmonitor/systemmonitor.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/262bf0af8479f04fdbc41e4c8c2a11dcd403564f
Comment 12 Nate Graham 2022-08-05 14:29:32 UTC
Git commit e64c13729bd1e2de43689b310caafac62f748c87 by Nate Graham, on behalf of Alexander Lohnau.
Committed on 05/08/2022 at 14:29.
Pushed by ngraham into branch 'Plasma/5.25'.

Fix systemmonitor preferences being reset

See https://invent.kde.org/frameworks/plasma-framework/-/commit/3078bc25dfe49bb627ae9a65cd18020054a5950e#note_497421


(cherry picked from commit 262bf0af8479f04fdbc41e4c8c2a11dcd403564f)

M  +1    -1    applets/systemmonitor/systemmonitor/systemmonitor.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/e64c13729bd1e2de43689b310caafac62f748c87
Comment 13 Patrick Silva 2022-08-08 13:49:54 UTC
*** Bug 457589 has been marked as a duplicate of this bug. ***
Comment 14 Nate Graham 2022-08-08 17:09:46 UTC
*** Bug 457538 has been marked as a duplicate of this bug. ***
Comment 15 Nate Graham 2022-08-09 19:34:51 UTC
*** Bug 457657 has been marked as a duplicate of this bug. ***
Comment 16 Michal Hlavac 2022-09-12 15:19:41 UTC
hi, I am using openSUSE Tumbleweed with plasma 5.25.5 and this error is still present.

thanks
Comment 17 Michal Hlavac 2022-09-12 22:16:37 UTC
It works after latest snapshot update 20220911.

https://lists.opensuse.org/archives/list/factory@lists.opensuse.org/message/XAWANZS6DH3UAQ2VENEGR2YCUYHY3OYA/