Fix systemmonitor preferences being reset

See https://invent.kde.org/frameworks/plasma-framework/-/commit/3078bc25dfe49bb627ae9a65cd18020054a5950e#note_497421

BUG: 454004


(cherry picked from commit 262bf0af8479f04fdbc41e4c8c2a11dcd403564f)