applets/systemmonitor/systemmonitor/systemmonitor.cpp
@@ -86,6 +86,6 @@ void SystemMonitor::openSystemMonitor()
     job->start();
 }
 
-K_PLUGIN_CLASS(SystemMonitor)
+K_PLUGIN_CLASS_WITH_JSON(SystemMonitor, "package/metadata.json")
 
 #include "systemmonitor.moc"
